--- a/ETL_Project.ipynb
+++ b/ETL_Project.ipynb
@@ -188,7 +188,7 @@
     "#Headers can be found on respective websites\n",
     "headers = {\n",
     "    'x-rapidapi-host': \"world-population.p.rapidapi.com\",\n",
-    "    'x-rapidapi-key': \"e9a37f6fddmsh01e00fe3f110346p171965jsnc586c5f7351a\"\n",
+    "    'x-rapidapi-key': \"******************************************"\n",
     "    }\n",
     "\n",
     "#Add column to the dataframe\n",
